--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="" href="<%= BASE_URL %>css/common.css"> -->
+    <!-- <link rel="" href="<%= BASE_URL %>css/iconfont.css"> -->
     <title>miaomiao</title>
+    <style>
+      *{ margin : 0; padding : 0;}
+      ul,li{ list-style: none;}
+      img{ display: block;}
+      html,body{ height:100%;}
+    </style>
   </head>
   <body>
     <noscript>
